Update backend package
