# packages/backend/src/controllers/graph.controller.ts
@@ -8,17 +8,18 @@ import {
     Query,
     Route,
     SuccessResponse,
+    Response,
     Request,
     Security,
     Tags,
 } from "@tsoa/runtime";
-import { PrismaClient } from '@prisma/client';
+import { PrismaClient, Prisma } from '@prisma/client';
 import { provideSingleton } from '@/utils/singleton';
 import winston from 'winston';
 import { AuthenticatedRequest } from '@/interfaces/authenticatedRequest';
 
 
-interface GraphCreationParams {
+type GraphCreationParams = {
     /**
      * A human readable name for the graph
      */
@@ -29,15 +30,26 @@ interface GraphCreationParams {
     graph: string;
 }
 
-interface CreatedGraph {
+type Graph = {
     id: string;
+    name: string;
+    graph: string;
+    owner: string;
+    createdAt: string;
+    updatedAt: string;
 }
+
+/**
+ * The created graph
+ */
+export interface CreatedGraph extends Pick<Graph, 'id'> { }
 
 
 
 
 @Route("graph")
 @Tags("Graph")
+@Security("bearerAuth")
 @provideSingleton(UsersController)
 export class UsersController extends Controller {
 
@@ -57,14 +69,12 @@ export class UsersController extends Controller {
      * @param requestBody 
      */
     @SuccessResponse("201")
-    @Security("cookieAuth")
+
     @Post()
     public async createGraph(
         @Request() request: AuthenticatedRequest,
         @Body() requestBody: GraphCreationParams
     ): Promise<CreatedGraph> {
-
-
         //TODO add validation here
         const newGraph = await this.dataSource.graph.create({
             data: {
@@ -83,25 +93,50 @@ export class UsersController extends Controller {
 
 
     @SuccessResponse("200")
-    @Security("cookieAuth")
+    @Response<any>("404", "Graph not found")
     @Get('{graphId}')
     public async getGraph(
         @Request() request: AuthenticatedRequest,
         graphId: string
     ) {
-            console.log(graphId)
-        // return graphs;
+        const graph = await this.dataSource.graph.findFirst({
+            where: {
+                id: graphId,
+                owner: request.user.id
+            }
+        })
+        if (!graph) {
+            this.setStatus(404);
+            return;
+        }
+
+        this.setStatus(200);
+        return graph;
     }
 
     @SuccessResponse("200")
-    @Security("cookieAuth")
+    @Response<any>("404", "Graph not found")
     @Delete('{graphId}')
     public async deleteGraph(
         @Request() request: AuthenticatedRequest,
         @Query() graphId: string
     ) {
-        // return graphs;
+
+        try {
+            await this.dataSource.graph.delete({
+                where: {
+                    id: graphId,
+                    owner: request.user.id
+                }
+            });
+        } catch (err) {
+            if (err instanceof Prisma.PrismaClientKnownRequestError) {
+                if (err.code === 'P2025') {
+                    this.setStatus(404);
+                    return;
+                }
+            }
+            throw err;
+        }
     }
-
-
 }
